Add OpenEXR format support (#562)
* Add OpenEXR format support

This PR adds OpenEXR format support so that it is possible
to extract channels from EXR formats.

Two APIs have been added, decode_exr_info and decode_exr.

This PR fixes 216

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix python3 and macos issue

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Use a different sample exr image

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Expose additional API

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Address review comments

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 font_*.h linguist-generated=true
+dwaLookups.* linguist-generated=true
+b44ExpLogTable.* linguist-generated=true
+toFloat.* linguist-generated=true
+eLut.* linguist-generated=true
