Enable SSE4.2 and AVX (not AVX2) for tensorflow-io (#613)
* Enable SSE4.2 and AVX (not AVX2) for tensorflow-io

This PR is part of the effort for 612 and 611. Basically
we enables SSE4.2 and AVX support by default on Linux.

If machines used does not have the SSE4.2 and AVX support
then it will thrown out an error on Linux.

Use could still build their own binary with any instruction set.

Note SSE4.2 and AVX are enabled by tensorflow's core library
already, so we are basically inline with tensorflow.

Note also that AVX2 are not enabled yet, also inline with tensorflow.

This PR fixes 612.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Travis CI configuration

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -9,6 +9,21 @@ load(
 load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 
 cc_library(
+    name = "cpuinfo",
+    srcs = [
+        "kernels/cpu_check.cc",
+        "kernels/cpu_info.cc",
+        "kernels/cpu_info.h",
+    ],
+    copts = tf_io_copts(),
+    linkstatic = True,
+    deps = [
+        "@local_config_tf//:libtensorflow_framework",
+        "@local_config_tf//:tf_header_lib",
+    ],
+)
+
+cc_library(
     name = "sequence_ops",
     srcs = [
         "kernels/sequence_ops.h",
@@ -242,6 +257,7 @@ cc_binary(
         "//tensorflow_io/bigtable:bigtable_ops",
         "//tensorflow_io/core:audio_ops",
         "//tensorflow_io/core:core_ops",
+        "//tensorflow_io/core:cpuinfo",
         "//tensorflow_io/core:image_ops",
         "//tensorflow_io/core:mnist_ops",
         "//tensorflow_io/core:pcap_ops",
