--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,6 @@ install:
 - export BAZEL_CACHE=.cache/bazel
 - |
   if [[ $(uname) == "Darwin" ]]; then
-    bash -x -e tests/test_ignite/start_ignite.sh ;
     bash -x -e tests/test_kafka/kafka_test.sh start kafka ;
     bash -x -e tests/test_azure/start_azure.sh ;
     bash -x -e tests/test_dicom/dicom_samples.sh download ;
@@ -73,7 +72,7 @@ jobs:
   - stage: build
     name: "Nightly Release Build on macOS 2.7.13"
     os: osx
-    osx_image: xcode9.3
+    osx_image: xcode10
     script:
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
     - bash -x -e .travis/wheel.test.sh
@@ -82,7 +81,7 @@ jobs:
   - stage: build
     name: "Nightly Release Build on macOS 3.5.3"
     os: osx
-    osx_image: xcode9.3
+    osx_image: xcode10
     script:
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
     - bash -x -e .travis/wheel.test.sh
@@ -91,7 +90,16 @@ jobs:
   - stage: build
     name: "Nightly Release Build on macOS 3.6.2"
     os: osx
-    osx_image: xcode9.3
+    osx_image: xcode10
+    script:
+    - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
+    - bash -x -e .travis/wheel.test.sh
+    after_success: bash -x -e .travis/after-success.sh
+
+  - stage: build
+    name: "Nightly Release Build on macOS 3.7.0"
+    os: osx
+    osx_image: xcode10
     script:
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
     - bash -x -e .travis/wheel.test.sh
