--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -256,17 +256,17 @@ cc_binary(
         #"//tensorflow_io/bigquery:bigquery_ops",
         #"//tensorflow_io/bigtable:bigtable_ops",
         #"//tensorflow_io/core:audio_ops",
-        #"//tensorflow_io/core:core_ops",
-        #"//tensorflow_io/core:cpuinfo",
-        #"//tensorflow_io/core:image_ops",
-        #"//tensorflow_io/core:mnist_ops",
-        #"//tensorflow_io/core:pcap_ops",
-        #"//tensorflow_io/core:text_ops",
-        #"//tensorflow_io/dicom:dicom_ops",
-        #"//tensorflow_io/gcs:gcs_config_ops",
-        #"//tensorflow_io/genome:genome_ops",
-        #"//tensorflow_io/grpc:grpc_ops",
-        #"//tensorflow_io/hdf5:hdf5_ops",
+        "//tensorflow_io/core:core_ops",
+        "//tensorflow_io/core:cpuinfo",
+        "//tensorflow_io/core:image_ops",
+        "//tensorflow_io/core:mnist_ops",
+        "//tensorflow_io/core:pcap_ops",
+        "//tensorflow_io/core:text_ops",
+        "//tensorflow_io/dicom:dicom_ops",
+        "//tensorflow_io/gcs:gcs_config_ops",
+        "//tensorflow_io/genome:genome_ops",
+        "//tensorflow_io/grpc:grpc_ops",
+        "//tensorflow_io/hdf5:hdf5_ops",
         "//tensorflow_io/ignite:ignite_ops",
         "//tensorflow_io/json:json_ops",
         "//tensorflow_io/kafka:kafka_ops",
