Enable libtensorflow_io.so
Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -250,12 +250,12 @@ cc_binary(
     copts = tf_io_copts(),
     linkshared = 1,
     deps = [
-        #"//tensorflow_io/arrow:arrow_ops",
-        #"//tensorflow_io/avro:avro_ops",
-        #"//tensorflow_io/azure:azfs_ops",
-        #"//tensorflow_io/bigquery:bigquery_ops",
-        #"//tensorflow_io/bigtable:bigtable_ops",
-        #"//tensorflow_io/core:audio_ops",
+        "//tensorflow_io/arrow:arrow_ops",
+        "//tensorflow_io/avro:avro_ops",
+        "//tensorflow_io/azure:azfs_ops",
+        "//tensorflow_io/bigquery:bigquery_ops",
+        "//tensorflow_io/bigtable:bigtable_ops",
+        "//tensorflow_io/core:audio_ops",
         "//tensorflow_io/core:core_ops",
         "//tensorflow_io/core:cpuinfo",
         "//tensorflow_io/core:image_ops",
