Support graph mode  dataset usage of IODataset.graph(tf.uint8).from_ffmpeg (#622)
* Rework on audio related test, use fixtures and parameters

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add Audio support

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add Video support

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix python 3 issue

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -207,6 +207,7 @@ cc_library(
     name = "ffmpeg_3.4_ops",
     srcs = [
         "kernels/ffmpeg_kernels.cc",
+        "kernels/ffmpeg_kernels_deprecated.cc",
         "ops/ffmpeg_ops.cc",
     ],
     copts = tf_io_copts(),
@@ -221,6 +222,7 @@ cc_library(
     name = "ffmpeg_2.8_ops",
     srcs = [
         "kernels/ffmpeg_kernels.cc",
+        "kernels/ffmpeg_kernels_deprecated.cc",
         "ops/ffmpeg_ops.cc",
     ],
     copts = tf_io_copts(),
