Move Dicom's documentation to docs/tutorials (tensorflow.org/io) (#624)
* Move Dicom's documentation to docs/tutorials (tensorflow.org/io)

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Remove display image (will shown automatically)

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update dicom file

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to use NIH Chest X-ray dataset, added the attribution link per dataset usage requirement

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update toc to use `Decode DICOM files for medical imaging`

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/docs/tutorials/_toc.yaml
+++ b/docs/tutorials/_toc.yaml
@@ -14,6 +14,7 @@
 #
 # ==============================================================================
 toc:
-# For example see: https://github.com/tensorflow/addons/blob/master/docs/tutorials/_toc.yaml
 - title: "BigQuery"
   path: /io/tutorials/bigquery
+- title: "Decode DICOM files for medical imaging"
+  path: /io/tutorials/dicom
