Add tf.keras native io processing (#634)
* Add IOLayer to use tfio with tf.keras

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add tf.keras native io processing

This PR adds IOLayer as an attempt to have a tf.keras-native io
processing.

The idea about IOLayer is that IOLayer is a special layer that
pass through input/output of the keras model, and send a copy (`tee`) to
a storage such as text file or kafka streaming.

As such the following is possible:
```
  model = tf.keras.Sequential([
      tf.keras.layers.Flatten(input_shape=(28, 28)),
      tf.keras.layers.Dense(128, activation=tf.nn.relu),
      tf.keras.layers.Dense(10, activation=tf.nn.softmax)
  ])

  model.compile(optimizer='adam',
                loss='sparse_categorical_crossentropy',
                metrics=['accuracy'])

  model.fit(train_images, train_labels, epochs=5)

  model.summary()

  # For predict, let's create an additional layer to tee to kafka
  io_layer = tfio.IOLayer.kafka("topic")

  io_model = tf.keras.models.Model(
      inputs=model.input,
      outputs=io_layer(model.layers[-1].output))

  predictions = io_model.predict(test_images)

  io_layer.sync()
```

You could even pass IOLayer to the middle of the keras model for training:
```
  f, filename = tempfile.mkstemp()
  os.close(f)
  io_layer = tfio.IOLayer.text(filename)

  model = tf.keras.Sequential([
      tf.keras.layers.Flatten(input_shape=(28, 28)),
      io_layer,
      tf.keras.layers.Dense(128, activation=tf.nn.relu),
      tf.keras.layers.Dense(10, activation=tf.nn.softmax)
  ])

  model.compile(optimizer='adam',
                loss='sparse_categorical_crossentropy',
                metrics=['accuracy'])

  model.fit(train_images, train_labels, epochs=5)

  model.summary()`
```

Though the above may not be that useful in most of the situations as
it will be substentially slower during traing to also write data back to storage.

There are seve

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -253,6 +253,7 @@ cc_library(
         "kernels/csv_kernels.cc",
         "kernels/libsvm_kernels.cc",
         "kernels/text_kernels.cc",
+        "kernels/text_layer_kernels.cc",
         "kernels/text_re2.cc",
         "kernels/text_sequence.cc",
         "ops/libsvm_ops.cc",
