Add advisory clang-format lint check (#643)
* Add advisory clang-format lint check

This PR adds advisory clang-format lint check (not enforced yet).

In the past we tried to use clang-format to lint c++ files. However,
different clang-format versions does not generate the same output
(especially in early versions of 3.8/etc).

In this PR, we use llvm-toolchain to ping clang to 8.0.0 so clang-format
will be pinned as well.

Usage:
```
bash -x -e .travis/lint.sh clang-git-diff
```
will check touched files against master.

```
bash -x -e .travis/lint.sh clang
```
will check all files.

At the moment, clang-format are not enabled, it is only to be run locally.

Once all files have been migrated we may start enable it.

Note we use google c++ style.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Lint audio_ops.cc as a test

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Check tensorflow_io directory only (skip third_party)

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Move generated font file out of tensorflow_io

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Replace docker with bazel in lint, to avoid dependency in macOS

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add BAZEL to lint

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -164,7 +164,6 @@ cc_library(
     srcs = [
         "kernels/decode_dicom_data.cc",
         "kernels/decode_dicom_image.cc",
-        "kernels/font_opensans_regular.h",
         "kernels/image_bmp_kernels.cc",
         "kernels/image_jpeg_kernels.cc",
         "kernels/image_kernels.cc",
@@ -180,6 +179,7 @@ cc_library(
     linkstatic = True,
     deps = [
         "//tensorflow_io/core:dataset_ops",
+        "//third_party:font",
         "@dcmtk",
         "@easyexif",
         "@freetype",
