[LINKEDIN-AVRO] Add parallel calls to all maps - Why? We've seen map operations take a long time and the can be parallelized trivially - What? Add num_parallel_calls to map for labels
RB=1895727
G=tensorflow-reviewers,tony-reviewers
R=khu,chren,anyan,xhzhang
A=khu,chren,anyan

Split out laoding and decoding into strings tensors
- Why? We think this will help scale the IO reading pipeline through improved prallelism
- What? Add the avro record dataset op that loads and decodes data into string tensors

Simplify the avro record dataset to make it one file to compile

Adjust build of avro dataset
- Why? Several build failures, test failures, symbols issues
- What?
  * Fix build for avro tensorflow_io.bzl moved to third_party
  * Fix export of symbol make_avro_dataset
  * Fix docker file by excluding locked down dependency
  * Fix make_avro_dataset by updating AUTOTUNE
  * Fix element_spec method -- refactor of API
  * Add init python files and export of symbols
  * Modify _AvroDataset to adhere to use tensor specs instead of structure
  * Adjust test to run in eager mode only
  * Adjust test cases to use built-in comparisons and eager tensor conversion

--- a/tensorflow_io/avro/BUILD
+++ b/tensorflow_io/avro/BUILD
@@ -2,10 +2,16 @@ licenses(["notice"])  # Apache 2.0
 
 package(default_visibility = ["//visibility:public"])
 
+load(
+    "//third_party/tf:tensorflow_io.bzl",
+    "tf_io_copts",
+)
+
 cc_library(
     name = "avro_ops",
     srcs = [
         "kernels/avro_dataset.cc",
+        "kernels/avro_record_dataset_op.cc",
         "ops/avro_ops.cc",
     ],
     copts = [
@@ -77,6 +83,8 @@ cc_library(
             "utils/avro_parser_tree.h",
             "utils/parse_avro_attrs.h",
             "utils/avro_file_stream_reader.h",
+            "utils/avro_record_reader.h",
+            "utils/name_utils.h",  # TODO(fraudies): Remove when migrating to TF 2.0, use TF implementation
             ],
     deps = [
         "//tensorflow_io/core:dataset_ops",
@@ -92,6 +100,8 @@ cc_library(
             "utils/avro_parser_tree.cc",
             "utils/parse_avro_attrs.cc",
             "utils/avro_file_stream_reader.cc",
+            "utils/avro_record_reader.cc",
+            "utils/name_utils.cc", # TODO(fraudies): Remove when migrating to TF 2.0, use TF implementation
             ],
     deps = [
         ":avro_utils_api",
