Enable SSE 4.2 and AVX on macOS as well, and further optimization (#649)
* Enable SSE 4.2 and AVX on macOS as well

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Enable --compilation_mode=opt

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Stop after 1800 (30min) to populate Travis CI cache

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Re-enable

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Only enable SSE 4.2 and AVX, as we continue to have issues with Travis CI execution limit otherwise

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Enable all

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update comment

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,7 @@ jobs:
     os: osx
     osx_image: xcode10
     script:
+    - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
     - bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
@@ -84,6 +85,7 @@ jobs:
     os: osx
     osx_image: xcode10
     script:
+    - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
     - bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
@@ -93,6 +95,7 @@ jobs:
     os: osx
     osx_image: xcode10
     script:
+    - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
     - bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
@@ -102,6 +105,7 @@ jobs:
     os: osx
     osx_image: xcode10
     script:
+    - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
     - bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
