--- a/.travis.yml
+++ b/.travis.yml
@@ -77,8 +77,8 @@ jobs:
     script:
     - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - bash -x -e .travis/wheel.test.sh
-    after_success: bash -x -e .travis/after-success.sh
+    - echo bash -x -e .travis/wheel.test.sh
+    after_success: echo bash -x -e .travis/after-success.sh
 
   - stage: build
     name: "Nightly Release Build on macOS 3.5.3"
@@ -87,8 +87,8 @@ jobs:
     script:
     - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - bash -x -e .travis/wheel.test.sh
-    after_success: bash -x -e .travis/after-success.sh
+    - echo bash -x -e .travis/wheel.test.sh
+    after_success: echo bash -x -e .travis/after-success.sh
 
   - stage: build
     name: "Nightly Release Build on macOS 3.6.2"
@@ -97,8 +97,8 @@ jobs:
     script:
     - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - bash -x -e .travis/wheel.test.sh
-    after_success: bash -x -e .travis/after-success.sh
+    - echo bash -x -e .travis/wheel.test.sh
+    after_success: echo bash -x -e .travis/after-success.sh
 
   - stage: build
     name: "Nightly Release Build on macOS 3.7.0"
@@ -107,8 +107,8 @@ jobs:
     script:
     - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - bash -x -e .travis/wheel.test.sh
-    after_success: bash -x -e .travis/after-success.sh
+    - echo bash -x -e .travis/wheel.test.sh
+    after_success: echo bash -x -e .travis/after-success.sh
 
 notifications:
 - email: false
