--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -319,19 +319,19 @@ cc_binary(
     deps = [
         "//tensorflow_io/arrow:arrow_ops",
         "//tensorflow_io/azure:azfs_ops",
-        #"//tensorflow_io/bigquery:bigquery_ops",
-        #"//tensorflow_io/bigtable:bigtable_ops",
+        "//tensorflow_io/bigquery:bigquery_ops",
+        "//tensorflow_io/bigtable:bigtable_ops",
         "//tensorflow_io/core:audio_ops",
         "//tensorflow_io/core:avro_ops",
         "//tensorflow_io/core:core_ops",
         "//tensorflow_io/core:cpuinfo",
-        #"//tensorflow_io/core:genome_ops",
-        #"//tensorflow_io/core:hdf5_ops",
-        #"//tensorflow_io/core:image_ops",
-        #"//tensorflow_io/core:lmdb_ops",
-        #"//tensorflow_io/core:mnist_ops",
-        #"//tensorflow_io/core:parquet_ops",
-        #"//tensorflow_io/core:pcap_ops",
+        "//tensorflow_io/core:genome_ops",
+        "//tensorflow_io/core:hdf5_ops",
+        "//tensorflow_io/core:image_ops",
+        "//tensorflow_io/core:lmdb_ops",
+        "//tensorflow_io/core:mnist_ops",
+        "//tensorflow_io/core:parquet_ops",
+        "//tensorflow_io/core:pcap_ops",
         #"//tensorflow_io/core:text_ops",
         #"//tensorflow_io/gcs:gcs_config_ops",
         #"//tensorflow_io/grpc:grpc_ops",
