--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -332,15 +332,15 @@ cc_binary(
         "//tensorflow_io/core:mnist_ops",
         "//tensorflow_io/core:parquet_ops",
         "//tensorflow_io/core:pcap_ops",
-        #"//tensorflow_io/core:text_ops",
-        #"//tensorflow_io/gcs:gcs_config_ops",
-        #"//tensorflow_io/grpc:grpc_ops",
-        #"//tensorflow_io/ignite:ignite_ops",
-        #"//tensorflow_io/json:json_ops",
-        #"//tensorflow_io/kafka:kafka_ops",
-        #"//tensorflow_io/kinesis:kinesis_ops",
-        #"//tensorflow_io/oss:oss_ops",
-        #"//tensorflow_io/pubsub:pubsub_ops",
+        "//tensorflow_io/core:text_ops",
+        "//tensorflow_io/gcs:gcs_config_ops",
+        "//tensorflow_io/grpc:grpc_ops",
+        "//tensorflow_io/ignite:ignite_ops",
+        "//tensorflow_io/json:json_ops",
+        "//tensorflow_io/kafka:kafka_ops",
+        "//tensorflow_io/kinesis:kinesis_ops",
+        "//tensorflow_io/oss:oss_ops",
+        "//tensorflow_io/pubsub:pubsub_ops",
         "@libarchive",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
