--- a/tensorflow_io/oss/BUILD
+++ b/tensorflow_io/oss/BUILD
@@ -23,4 +23,5 @@ cc_library(
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
     ],
+    alwayslink = 1,
 )
