--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -211,6 +211,7 @@ cc_library(
     linkstatic = True,
     deps = [
         "//tensorflow_io/core:dataset_ops",
+        "@vorbis",
     ],
     alwayslink = 1,
 )
