Fix prometheus dataset issue to allow repeat iter (#669)
* Fix prometheus dataset issue to allow repeat iter

This PR fixes prometheus issue to allow repeatly calling
iter. This is needed to pass parometheus for tf.keras training.
This PR also add experimental support of prometheus scraping so
that it is possible to bypass the prometheus server itself, useful
for inference only scenario from exposed API (e.g., web server exposing
prometheus metrics).

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Pylint fix

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -95,7 +95,9 @@ go_binary(
     deps = [
         "@com_github_prometheus_client_golang//api:go_default_library",
         "@com_github_prometheus_client_golang//api/prometheus/v1:go_default_library",
+        "@com_github_prometheus_client_model//go:go_default_library",
         "@com_github_prometheus_common//model:go_default_library",
+        "@com_github_prometheus_prom2json//:go_default_library",
     ],
 )
 
