Reenable PubSub tests, and a few fixes (#674)
* Remove old pubsub

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update PubSub dataset

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Change to use lambda with allocator

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Enabled macOS

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ install:
   if [[ $(uname) == "Darwin" ]]; then
     bash -x -e tests/test_kafka/kafka_test.sh start kafka ;
     bash -x -e tests/test_azure/start_azure.sh ;
+    bash -x -e tests/test_pubsub/pubsub_test.sh start pubsub ;
   fi
 
 stages:
