--- a/.travis.yml
+++ b/.travis.yml
@@ -69,47 +69,51 @@ jobs:
     script:
     - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    after_success: bash -x -e .travis/after-success.sh
+    #after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
     name: "Nightly Release Build on macOS 2.7.13"
     os: osx
     osx_image: xcode10
     script:
+    - for i in `seq 1 50`; do echo status update $i ; sleep 60; done &
     - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - bash -x -e .travis/wheel.test.sh
-    after_success: bash -x -e .travis/after-success.sh
+    #- bash -x -e .travis/wheel.test.sh
+    #after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
     name: "Nightly Release Build on macOS 3.5.3"
     os: osx
     osx_image: xcode10
     script:
+    - for i in `seq 1 50`; do echo status update $i ; sleep 60; done &
     - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - bash -x -e .travis/wheel.test.sh
-    after_success: bash -x -e .travis/after-success.sh
+    #- bash -x -e .travis/wheel.test.sh
+    #after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
     name: "Nightly Release Build on macOS 3.6.2"
     os: osx
     osx_image: xcode10
     script:
+    - for i in `seq 1 50`; do echo status update $i ; sleep 60; done &
     - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - bash -x -e .travis/wheel.test.sh
-    after_success: bash -x -e .travis/after-success.sh
+    #- bash -x -e .travis/wheel.test.sh
+    #after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
     name: "Nightly Release Build on macOS 3.7.0"
     os: osx
     osx_image: xcode10
     script:
+    - for i in `seq 1 50`; do echo status update $i ; sleep 60; done &
     - export BAZEL_CPU_OPTIMIZATION=yes
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - bash -x -e .travis/wheel.test.sh
-    after_success: bash -x -e .travis/after-success.sh
+    #- bash -x -e .travis/wheel.test.sh
+    #after_success: bash -x -e .travis/after-success.sh
 
 notifications:
 - email: false
