--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -409,11 +409,11 @@ cc_binary(
         "//tensorflow_io/core:pubsub_ops",
         "//tensorflow_io/core:text_ops",
         "//tensorflow_io/core/azure:azfs_ops",
+        "//tensorflow_io/core/oss:oss_ops",
         "//tensorflow_io/gcs:gcs_config_ops",
         "//tensorflow_io/ignite:ignite_ops",
         "//tensorflow_io/json:json_ops",
         "//tensorflow_io/kafka:kafka_ops",
-        "//tensorflow_io/oss:oss_ops",
         "@libarchive",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
