Add HDR image format support (#567)
This PR add HDR image format (RGBE or Radiance HDR) support.
Part of the effort is to implement a `decode_hdr` that extract
HDR format into float rgb channels.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -162,6 +162,7 @@ cc_library(
         "kernels/decode_dicom_data.cc",
         "kernels/decode_dicom_image.cc",
         "kernels/image_bmp_kernels.cc",
+        "kernels/image_hdr_kernels.cc",
         "kernels/image_jpeg_kernels.cc",
         "kernels/image_kernels.cc",
         "kernels/image_openexr_kernels.cc",
@@ -184,6 +185,7 @@ cc_library(
         "@libtiff",
         "@libwebp",
         "@openexr",
+        "@stb",
     ],
     alwayslink = 1,
 )
