Add decode_json support (#695)
This PR adds decode_json support so that it is possible to use
```
values = tfio.experimental.serialization.decode_json(json, specs)
```
to decode a JSON string into a structured Tensors.

The specs field is the structured tf.TensorSpec that is necessary
to reconstruct the JSON values. The reason being JSON could be intepreted
differently in lists:
```
{
"v": [1, 2, 3]
}
```
could be considered as one Tensor of shape `(3)`, or a 3 Tensor structure within dict "v".

Note structured tf.TensorSpecs need to change list `[]` into tuple `()`
as list is not supported in structures in TensorFlow.

This PR fixes 692.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -369,6 +369,21 @@ cc_library(
 )
 
 cc_library(
+    name = "serialization_ops",
+    srcs = [
+        "kernels/serialization_kernels.cc",
+        "ops/serialization_ops.cc",
+    ],
+    copts = tf_io_copts(),
+    linkstatic = True,
+    deps = [
+        "//tensorflow_io/core:dataset_ops",
+        "@rapidjson",
+    ],
+    alwayslink = 1,
+)
+
+cc_library(
     name = "grpc_ops",
     srcs = [
         "kernels/grpc_kernels.cc",
@@ -424,6 +439,7 @@ cc_binary(
         "//tensorflow_io/core:parquet_ops",
         "//tensorflow_io/core:pcap_ops",
         "//tensorflow_io/core:pubsub_ops",
+        "//tensorflow_io/core:serialization_ops",
         "//tensorflow_io/core:text_ops",
         "//tensorflow_io/core/azure:azfs_ops",
         "//tensorflow_io/core/oss:oss_ops",
