--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 env:
-  BAZEL_VERSION: 0.29.0
+  BAZEL_VERSION: 2.0.0
   BAZEL_OPTIMIZATION: --copt=-msse4.2 --copt=-mavx --compilation_mode=opt
 
 jobs:
@@ -25,7 +25,7 @@ jobs:
           BAZEL_OS=$(uname | tr '[:upper:]' '[:lower:]')
           curl -sSOL https://github.com/bazelbuild/bazel/releases/download/${BAZEL_VERSION}/bazel-${BAZEL_VERSION}-installer-${BAZEL_OS}-x86_64.sh
           sudo bash -e bazel-${BAZEL_VERSION}-installer-${BAZEL_OS}-x86_64.sh
-          bash -x -e .travis/lint.sh
+          bazel run -s --verbose_failures //tools/lint:check
 
   macos-bazel:
     name: Bazel macOS
