Update GitHub Actions to add release and nightly build (#713)
* Add release actions

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add nightly release

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Adjust order

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add nightly release

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Adjust BUILD_NUMBER

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Adjust dependency

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add additional test for nightly

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Change to `__token__`

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Remove test for nightly

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Use timestamp as BUILD_NUMBER

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add master branch restriction back

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,12 +55,12 @@ jobs:
           path: bazel-bin/tensorflow_io
 
   macos-wheel:
+    name: Wheel ${{ matrix.python }} macOS
     needs: macos-bazel
     runs-on: macos-latest
     strategy:
       matrix:
         python: ['3.5', '3.6', '3.7']
-    name: Wheel ${{ matrix.python }} macOS
     steps:
       - uses: actions/checkout@v1
       - uses: actions/download-artifact@v1
@@ -129,6 +129,7 @@ jobs:
           path: build/tensorflow_io
 
   linux-wheel:
+    name: Wheel ${{ matrix.python }} Linux
     needs: linux-bazel
     runs-on: ${{ matrix.os }}
     strategy:
@@ -142,7 +143,6 @@ jobs:
             python: '3.7'
           - os: ubuntu-18.04
             python: '3.5'
-    name: Wheel ${{ matrix.python }} Linux
     steps:
       - uses: actions/checkout@v1
       - uses: actions/download-artifact@v1
@@ -182,3 +182,198 @@ jobs:
           docker run -i --rm -v $PWD:/v -w /v --net=host \
             buildpack-deps:$(echo ${{ matrix.os }} | awk -F- '{print $2}') \
             bash -x -e .github/workflows/build.wheel.sh python${{ matrix.python }}
+
+  release:
+    name: Release
+    if: github.event_name == 'push'
+    needs: [lint, linux-wheel, macos-wheel]
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/download-artifact@v1
+        with:
+          name: macOS-3.5-wheel
+          path: macOS-3.5-wheel
+      - uses: actions/download-artifact@v1
+        with:
+          name: macOS-3.6-wheel
+          path: macOS-3.6-wheel
+      - uses: actions/download-artifact@v1
+        with:
+          name: macOS-3.7-wheel
+          path: macOS-3.7-wheel
+      - uses: actions/download-artifact@v1
+        with:
+          name: Linux-3.5-wheel
+          path: Linux-3.5-wheel
+      - uses: actions/download-artifact@v1
+        with:
+          name: Linux-3.6-wheel
+          path: Linux-3.6-wheel
+      - uses: actions/download-artifact@v1
+        with:
+          name: Linux-3.7-wheel
+          path: Linux-3.7-wheel
+      - run: |
+          set -e -x
+          mkdir -p wheelhouse
+          cp macOS-3.5-wheel/*.whl wheelhouse/
+          cp macOS-3.6-wheel/*.whl wheelhouse/
+          cp macOS-3.7-wheel/*.whl wheelhouse/
+          cp Linux-3.5-wheel/*.whl wheelhouse/
+          cp Linux-3.6-wheel/*.whl wheelhouse/
+          cp Linux-3.7-wheel/*.whl wheelhouse/
+          ls -la wheelhouse/
+          sha256sum wheelhouse/*.whl
+      - uses: actions/upload-artifact@v1
+        with:
+          name: tensorflow-io-release
+          path: wheelhouse
+
+  build-number:
+    name: Build Number
+    if: github.event_name == 'push'
+    runs-on: ubuntu-18.04
+    steps:
+      - run: |
+          set -e -x
+          BUILD_NUMBER=$(date "+%Y%m%d%H%M%S")
+          echo ${BUILD_NUMBER} > BUILD_NUMBER
+      - uses: actions/upload-artifact@v1
+        with:
+          name: BUILD_NUMBER
+          path: BUILD_NUMBER
+
+  macos-nightly:
+    name: Nightly ${{ matrix.python }} macOS
+    if: github.event_name == 'push'
+    needs: [lint, build-number, macos-bazel]
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python: ['3.5', '3.6', '3.7']
+    steps:
+      - uses: actions/download-artifact@v1
+        with:
+          name: BUILD_NUMBER
+      - uses: einaregilsson/build-number@v2
+      - run: echo "Build number is $BUILD_NUMBER"
+      - uses: actions/checkout@v1
+      - uses: actions/download-artifact@v1
+        with:
+          name: ${{ runner.os }}-bazel-bin
+          path: bazel-bin/tensorflow_io
+      - uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python }}
+      - name: Wheel ${{ matrix.python }} macOS
+        run: |
+          set -x -e
+          python -m pip install -U wheel setuptools
+          python --version
+          python setup.py --data bazel-bin -q bdist_wheel --nightly $BUILD_NUMBER
+      - name: Auditwheel ${{ matrix.python }} macOS
+        run: |
+          set -x -e
+          python -m pip install twine delocate
+          delocate-wheel --version
+          ls dist/*
+          for f in dist/*.whl; do
+            delocate-wheel -w wheelhouse  $f
+          done
+          ls wheelhouse/*
+      - uses: actions/upload-artifact@v1
+        with:
+          name: ${{ runner.os }}-${{ matrix.python }}-nightly
+          path: wheelhouse
+
+  linux-nightly:
+    name: Nightly ${{ matrix.python }} Linux
+    if: github.event_name == 'push'
+    needs: [lint, build-number, linux-bazel]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-16.04, ubuntu-18.04]
+        python: ['3.5', '3.6', '3.7']
+        exclude:
+          - os: ubuntu-16.04
+            python: '3.6'
+          - os: ubuntu-16.04
+            python: '3.7'
+          - os: ubuntu-18.04
+            python: '3.5'
+    steps:
+      - uses: actions/download-artifact@v1
+        with:
+          name: BUILD_NUMBER
+      - uses: einaregilsson/build-number@v2
+      - run: echo "Build number is $BUILD_NUMBER"
+      - uses: actions/checkout@v1
+      - uses: actions/download-artifact@v1
+        with:
+          name: ${{ runner.os }}-bazel-bin
+          path: bazel-bin/tensorflow_io
+      - name: Wheel ${{ matrix.python }} Linux
+        run: |
+          set -x -e
+          mv bazel-bin/tensorflow_io/.bazelrc .
+          docker run -i --rm --user $(id -u):$(id -g) -v /etc/password:/etc/password -v $PWD:/v -w /v --net=host python:${{ matrix.python }}-slim python setup.py --data bazel-bin -q bdist_wheel --nightly $BUILD_NUMBER
+      - name: Auditwheel ${{ matrix.python }} Linux
+        run: |
+          set -x -e
+          ls dist/*
+          for f in dist/*.whl; do
+            docker run -i --rm -v $PWD:/v -w /v --net=host quay.io/pypa/manylinux2010_x86_64 bash -x -e /v/third_party/tf/auditwheel repair --plat manylinux2010_x86_64 $f
+          done
+          sudo chown -R $(id -nu):$(id -ng) .
+          ls wheelhouse/*
+      - uses: actions/upload-artifact@v1
+        with:
+          name: ${{ runner.os }}-${{ matrix.python }}-nightly
+          path: wheelhouse
+
+  nightly:
+    name: Nightly
+    if: github.event_name == 'push'
+    needs: [linux-nightly, macos-nightly]
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/download-artifact@v1
+        with:
+          name: macOS-3.5-nightly
+          path: macOS-3.5-nightly
+      - uses: actions/download-artifact@v1
+        with:
+          name: macOS-3.6-nightly
+          path: macOS-3.6-nightly
+      - uses: actions/download-artifact@v1
+        with:
+          name: macOS-3.7-nightly
+          path: macOS-3.7-nightly
+      - uses: actions/download-artifact@v1
+        with:
+          name: Linux-3.5-nightly
+          path: Linux-3.5-nightly
+      - uses: actions/download-artifact@v1
+        with:
+          name: Linux-3.6-nightly
+          path: Linux-3.6-nightly
+      - uses: actions/download-artifact@v1
+        with:
+          name: Linux-3.7-nightly
+          path: Linux-3.7-nightly
+      - run: |
+          set -e -x
+          mkdir -p dist
+          cp macOS-3.5-nightly/*.whl dist/
+          cp macOS-3.6-nightly/*.whl dist/
+          cp macOS-3.7-nightly/*.whl dist/
+          cp Linux-3.5-nightly/*.whl dist/
+          cp Linux-3.6-nightly/*.whl dist/
+          cp Linux-3.7-nightly/*.whl dist/
+          ls -la dist/
+          sha256sum dist/*.whl
+      - uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.github_tensorflow_io_nightly }}
